# rag-semantic-kernel-mongodb-vcore

./: .env.example  .env.exmple  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  app.py  azure.yaml  pyproject.toml  rag-azure-openai-cosmosdb-notebook.ipynb  rag.py  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/: dependabot.yaml
.github/workflows/: azure-dev-validation.yaml  azure-dev.yaml  devcontainer-ci.yaml  frontend-format.yaml  frontend-lint.yaml  main_ragmongodbdemo.yml  python-lint-format.yaml  python-unit-test.yaml
infra/: main.bicep  main.parameters.json
infra/app/: key-vault-secrets.bicep
infra/core/database/cosmos/: cosmos-pg-adapter.bicep
infra/core/database/cosmos/mongo/: cosmos-mongo-cluster.bicep
infra/core/database/mysql/: flexibleserver.bicep
infra/core/database/postgresql/: aca-service.bicep  flexibleserver.bicep
src/: add_data.py  app.py  entrypoint.sh  pyproject.toml  rag.py  requirements.in  requirements.txt
src/data/: cleaned-top-movies-chunked.json
src/frontend/: index.html
src/frontend/static/: styles.css
src/quartapp/: __init__.py  app.py  rag.py
src/scripts/: add_data.py
src/static/: styles.css
templates/: index.html  result.html
tests/: conftest.py  test_app.py  test_config.py
